Pushing v163 from API 530b9634fb5619a69e58651cb6057ac0709406ce

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -9228,8 +9228,9 @@ components:
             - $ref: "#/components/schemas/appointment_type"
           x-expandable:
             $ref: "#/components/schemas/appointment_type"
-          description: Reference to the type of appointemnt that was booked.
+          description: Reference to the type of appointment that was booked.
           example: aptp_meYUvkuaI2akjnb5Kwt7
+          nullable: true
         member:
           oneOf:
             - type: string
@@ -9382,6 +9383,13 @@ components:
             Information about the video call generated or provided for this appointment. By default,
             Source will generate a visit URL for all created appointments when the appointment type
             has `video_enabled = true`.
+        externally_managed:
+          type: boolean
+          description:
+            Indicates that this appointment was imported from an external integrated calendar, such
+            as Google Calendar. External appointments are managed by Source directly and cannot be
+            updated via API.
+          example: false
         created_at:
           type: string
           format: date-time
@@ -9406,6 +9414,7 @@ components:
         - duration
         - participants
         - video_call
+        - externally_managed
         - created_at
         - updated_at
       title: Appointment
