--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -10862,6 +10862,13 @@ components:
                 description: Supervising physicians
                 created_at: 2021-05-13T16:33:00.000Z
                 updated_at: 2021-05-13T16:33:00.000Z
+            previous_values:
+              description:
+                The previous values of any attributes that changed. This propery is typically only
+                returned on *.updated events which may have modified several fields in a single
+                request.
+              example:
+                description: All physicians
           required:
             - object
           description: Payload contained within this event.
