--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -93,6 +93,7 @@ paths:
                 logo:
                   type: string
                   example: file_0A9zrLzCO7KPcnIbs40e
+                  nullable: true
                   description:
                     Pointer to the file to use as the logo for this account. Must be of purpose
                     account_logo.
