--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -379,6 +379,9 @@ paths:
               type: string
               enum:
                 - booked
+                - confirmed
+                - no_show
+                - completed
                 - canceled
             description: Filter appointments by their status. You may provide multiple statuses.
           required: false
@@ -555,6 +558,10 @@ paths:
             schema:
               type: object
               properties:
+                appointment_type:
+                  type: string
+                  description: Unique ID or key of the appointment type for this appointment.
+                  example: intake_visit
                 time_zone:
                   type: string
                   description:
@@ -726,6 +733,54 @@ paths:
               schema:
                 $ref: "#/components/schemas/appointment"
       x-methodName: retrieve
+      x-belongsToResource: appointment
+  "/v1/scheduling/appointments/{id}/transition":
+    post:
+      summary: Transition an Appointment
+      description: >-
+        Transitions an existing appointment into another status.
+
+
+        Canceled appointments will not show up by default when listing appointments, but they can be
+        optionally requested. Appointments must be canceled before they can be deleted. Once an
+        appointment is canceled, it can no longer be modified.
+      tags:
+        - Appointment
+      parameters:
+        - in: path
+          style: simple
+          explode: true
+          name: id
+          schema:
+            type: string
+            example: appt_mTvufYJBBgYmbEAEZ6rE
+            description: Unique ID of the appointment.
+          required: true
+          description: Unique ID of the appointment.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                status:
+                  type: string
+                  enum:
+                    - booked
+                    - confirmed
+                    - no_show
+                    - completed
+                    - canceled
+              required:
+                - status
+      responses:
+        default:
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/appointment"
+      x-methodName: transition
       x-belongsToResource: appointment
   "/v1/scheduling/appointments/{id}/cancel":
     post:
@@ -9573,6 +9628,9 @@ components:
           type: string
           enum:
             - booked
+            - confirmed
+            - no_show
+            - completed
             - canceled
           description:
             Current status of this appointment. By default, newly created appointments will be in
@@ -14456,6 +14514,9 @@ components:
         - care_team.created
         - care_team.updated
         - care_team.deleted
+        - comment.created
+        - comment.updated
+        - comment.deleted
         - document.created
         - document.updated
         - document.deleted
